# llm-nursery

./: .gitignore  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  seed-nhs-extra.sh  seed-nhs.sh  seed-rag-security.sh  start-hybrid.sh  start-shards.sh  tailscale-setup.sh  test_piper.py  uninstall.sh  verify.sh  when_board_arrives.md
configs/: Dockerfile.llm-trainer
configs/inference/: coordinator-deployment.yaml  coordinator-pk-deployment.yaml  daemonset-pipeline.yaml  daemonset-pk.yaml  ollama-deployment.yaml  ollama-node1-deployment.yaml  ollama-node2-deployment.yaml  signal-cli-deployment.yaml
configs/rag/: chromadb-deployment.yaml  chromadb-pk-deployment.yaml  ingestion-job.yaml
configs/storage/: shared-storage.yaml  storage-infrastructure.yaml  storage-pk-infrastructure.yaml
configs/testing/: test-commands.yaml  test-security-qa-v4.yaml
configs/training/: train-basic-level.yaml  train-command-system.yaml
data/: bill-prime.md  health-prime.md  security-training-data-commands.json  security-training-data-v2.json
docs/: 2026-01-19-session-notes.md  parameter-pool-experiment.md
src/cli/: Dockerfile  chat.py  main.py  rag.py  requirements.txt
src/coordinator/: Dockerfile  Dockerfile.pk  main.py  pk_main.py  pk_requirements.txt
src/rag/: ingest.py
src/shard/: Dockerfile  requirements.txt  shard.py
