[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperknight-cli"
version = "1.0.0"
description = "paperknight AI - private AI CLI for ZimaBoard cluster"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.5",
    "rich>=13.9.4",
    "httpx>=0.27.2",
    "pyyaml>=6.0.2",
]

[project.scripts]
pk = "cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]

[tool.hatch.build]
sources = ["src"]
